--- a/img/img.qrc
+++ b/img/img.qrc
@@ -34,6 +34,8 @@
         <file>44x44/settings.png</file>
         <file>44x44/statistics.png</file>
         <file>44x44/windows.png</file>
+        <file>44x44/no_internet.png</file>
+        <file>44x44/internet.png</file>
     </qresource>
     <qresource prefix="/colorized_circles">
         <file>colorized_circles/circle1.png</file>
