--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -829,7 +829,7 @@ border-image: url(:44x44/44x44/no_internet.png);
                        <widget class="QLabel" name="internetTxt">
                         <property name="minimumSize">
                          <size>
-                          <width>170</width>
+                          <width>165</width>
                           <height>40</height>
                          </size>
                         </property>
@@ -873,14 +873,14 @@ color: #00ffc1;</string>
                       </property>
                       <property name="minimumSize">
                        <size>
-                        <width>110</width>
+                        <width>120</width>
                         <height>40</height>
                        </size>
                       </property>
                       <property name="maximumSize">
                        <size>
-                        <width>16777215</width>
-                        <height>16777215</height>
+                        <width>125</width>
+                        <height>40</height>
                        </size>
                       </property>
                       <property name="styleSheet">
@@ -923,9 +923,15 @@ color: #00ffc1;
                <property name="styleSheet">
                 <string notr="true">border: none;</string>
                </property>
+               <property name="lineWidth">
+                <number>0</number>
+               </property>
                <layout class="QVBoxLayout" name="verticalLayout_36">
                 <property name="spacing">
                  <number>0</number>
+                </property>
+                <property name="sizeConstraint">
+                 <enum>QLayout::SetFixedSize</enum>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -949,6 +955,9 @@ color: #00ffc1;
                     <property name="spacing">
                      <number>0</number>
                     </property>
+                    <property name="sizeConstraint">
+                     <enum>QLayout::SetMinimumSize</enum>
+                    </property>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_18">
                       <property name="spacing">
@@ -958,72 +967,106 @@ color: #00ffc1;
                        <number>4</number>
                       </property>
                       <item>
-                       <widget class="QWidget" name="updatesIndicator" native="true">
-                        <property name="minimumSize">
-                         <size>
-                          <width>35</width>
-                          <height>35</height>
-                         </size>
+                       <layout class="QVBoxLayout" name="indLayer">
+                        <property name="spacing">
+                         <number>0</number>
                         </property>
-                       </widget>
+                        <property name="sizeConstraint">
+                         <enum>QLayout::SetMinimumSize</enum>
+                        </property>
+                        <item>
+                         <widget class="QWidget" name="updatesIndicator" native="true">
+                          <property name="sizePolicy">
+                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                           </sizepolicy>
+                          </property>
+                          <property name="minimumSize">
+                           <size>
+                            <width>35</width>
+                            <height>35</height>
+                           </size>
+                          </property>
+                          <property name="maximumSize">
+                           <size>
+                            <width>35</width>
+                            <height>35</height>
+                           </size>
+                          </property>
+                         </widget>
+                        </item>
+                       </layout>
                       </item>
                       <item>
-                       <widget class="QLabel" name="updatesLabel">
-                        <property name="minimumSize">
-                         <size>
-                          <width>168</width>
-                          <height>40</height>
-                         </size>
+                       <layout class="QVBoxLayout" name="statusLayer">
+                        <property name="spacing">
+                         <number>0</number>
                         </property>
-                        <property name="maximumSize">
-                         <size>
-                          <width>16777215</width>
-                          <height>40</height>
-                         </size>
+                        <property name="sizeConstraint">
+                         <enum>QLayout::SetMinimumSize</enum>
                         </property>
-                        <property name="styleSheet">
-                         <string notr="true">font: 10.5pt &quot;Halvetica&quot; ;
-color: #00ffc1;</string>
-                        </property>
-                        <property name="text">
-                         <string/>
-                        </property>
-                        <property name="alignment">
-                         <set>Qt::AlignCenter</set>
-                        </property>
-                       </widget>
+                       </layout>
                       </item>
                      </layout>
                     </item>
                    </layout>
                   </item>
                   <item>
-                   <layout class="QVBoxLayout" name="verticalLayout_41">
-                    <property name="spacing">
+                   <widget class="QFrame" name="">
+                    <property name="maximumSize">
+                     <size>
+                      <width>117</width>
+                      <height>16777215</height>
+                     </size>
+                    </property>
+                    <property name="lineWidth">
                      <number>0</number>
                     </property>
-                    <item>
-                     <widget class="QPushButton" name="checkUpdatesBtn">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
-                      <property name="minimumSize">
-                       <size>
-                        <width>108</width>
-                        <height>40</height>
-                       </size>
-                      </property>
-                      <property name="maximumSize">
-                       <size>
-                        <width>16777215</width>
-                        <height>16777215</height>
-                       </size>
-                      </property>
-                      <property name="styleSheet">
-                       <string notr="true">QPushButton {
+                    <layout class="QVBoxLayout" name="verticalLayout_41">
+                     <property name="spacing">
+                      <number>0</number>
+                     </property>
+                     <property name="sizeConstraint">
+                      <enum>QLayout::SetMinimumSize</enum>
+                     </property>
+                     <property name="leftMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
+                      <number>0</number>
+                     </property>
+                     <item>
+                      <widget class="QPushButton" name="checkUpdatesBtn">
+                       <property name="sizePolicy">
+                        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                        </sizepolicy>
+                       </property>
+                       <property name="minimumSize">
+                        <size>
+                         <width>120</width>
+                         <height>40</height>
+                        </size>
+                       </property>
+                       <property name="maximumSize">
+                        <size>
+                         <width>125</width>
+                         <height>40</height>
+                        </size>
+                       </property>
+                       <property name="layoutDirection">
+                        <enum>Qt::LeftToRight</enum>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton {
 border: 2px solid #00ffc1;
 border-radius: 4px;
 padding: 2px;
@@ -1046,13 +1089,14 @@ padding: 2px;
 font: 75 italic 10.5pt &quot;Halvetica&quot; ;
 color: #c0c0c0;
 }</string>
-                      </property>
-                      <property name="text">
-                       <string>Check updates</string>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
+                       </property>
+                       <property name="text">
+                        <string>Check updates</string>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </widget>
                   </item>
                  </layout>
                 </item>
