--- a/ui/statistics.ui
+++ b/ui/statistics.ui
@@ -48,10 +48,19 @@
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_5">
+               <property name="spacing">
+                <number>4</number>
+               </property>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_5">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
                  <item>
                   <layout class="QVBoxLayout" name="layoutCurrentChart">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
                    <item>
                     <widget class="QWidget" name="currentChartWidget" native="true">
                      <property name="minimumSize">
@@ -74,8 +83,14 @@
                </item>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_6">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
                  <item>
                   <layout class="QVBoxLayout" name="layoutPowerChart">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
                    <item>
                     <widget class="QWidget" name="powerChartWidget" native="true"/>
                    </item>
